@@ -1,1 +1,2 @@
 # TempCode
+-Xms258m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=768m
